--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.5.3",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-styled-components": "^5.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.3"
   }
 }
