--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/mdx": "v1",
+    "@mdx-js/react": "v1",
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.5.3",
     "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-mdx": "^3.6.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-styled-components": "^5.6.0",
     "gatsby-source-filesystem": "^4.6.0",
